--- a/P008048.opf/meta.yml
+++ b/P008048.opf/meta.yml
@@ -1,15 +1,16 @@
-id: opecha:P008048
+id: P008048
 initial_creation_type: ocr
 source_metadata:
   id: bdr:W1AC34
   title: གུང་རུ་རྒྱལ་མཚན་བཟང་པོའི་སྟོང་ཐུན་དང་རྣམ་ཐར།
-  volume:
+  author: ''
+  volumes:
     76ad47a6a2e94db39e87439ca811ec65:
       image_group_id: I2PD18911
       title: Volume 1 of gung ru rgyal mtshan bzang po'i stong thun dang rnam thar/
       volume_number: 1
       total_pages: 200
-  author: ''
+      base_file: v001.txt
 ebook_metadata:
   title: གུང་རུ་རྒྱལ་མཚན་བཟང་པོའི་སྟོང་ཐུན་དང་རྣམ་ཐར།
   author: ''
