--- a/P008048.opf/meta.yml
+++ b/P008048.opf/meta.yml
@@ -5,12 +5,11 @@ source_metadata:
   title: གུང་རུ་རྒྱལ་མཚན་བཟང་པོའི་སྟོང་ཐུན་དང་རྣམ་ཐར།
   author: ''
   volumes:
-    76ad47a6a2e94db39e87439ca811ec65:
+    748dca2a865e4affb27ad3059ca177ad:
       image_group_id: I2PD18911
-      title: Volume 1 of gung ru rgyal mtshan bzang po'i stong thun dang rnam thar/
+      title: ''
       volume_number: 1
       total_pages: 200
-      base_file: v001.txt
 ebook_metadata:
   title: གུང་རུ་རྒྱལ་མཚན་བཟང་པོའི་སྟོང་ཐུན་དང་རྣམ་ཐར།
   author: ''
