--- a/P008048.opf/layers/v001/Pagination.yml
+++ b/P008048.opf/layers/v001/Pagination.yml
@@ -1,5 +1,5 @@
 id: 2e7a2a97c89a490c863e70c379b47c1c
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   df4b619e34e4476d82864848a523a6b9:
