--- a/P008048.opf/meta.yml
+++ b/P008048.opf/meta.yml
@@ -1,7 +1,7 @@
 id: P008048
 initial_creation_type: ocr
 created_at: 25/03/2020
-last_modified_at: 25/11/2021
+last_modified_at: 2021-12-17 12:57:51.754982
 source_metadata:
   id: bdr:W1AC34
   title: གུང་རུ་རྒྱལ་མཚན་བཟང་པོའི་སྟོང་ཐུན་དང་རྣམ་ཐར།
@@ -13,3 +13,5 @@ source_metadata:
       volume_number: 1
       total_pages: 200
       base_file: v001.txt
+  access: http://purl.bdrc.io/admindata/AccessOpen
+  restrictedInChina: false
